docs/books/k8s/traefik/nginx/nginx-ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-web-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-websecure-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    certResolver: myresolver
